Se actualizó el repositorio

--- a/style.css
+++ b/style.css
@@ -17,6 +17,6 @@ h1{
 }
 h2{
     text-align: center;
-    background-color: lightblue;
+    background-color: rgb(103, 238, 193);
     color: brown;
 }
